--- a/Battleship.Client/package.json
+++ b/Battleship.Client/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@microsoft/signalr": "^3.1.3",
     "@types/node": "^13.13.0",
+    "axios": "^0.19.2",
     "bulma": "^0.8.2",
     "core-js": "^3.6.4",
+    "json2typescript": "^1.4.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1",
